@@ -53,7 +53,6 @@ $_lang['stercseo.changefreq_desc'] = 'Specify how often (you expect) the content
 
 //Tab Redirects
 $_lang['stercseo.redirects'] = '301 Redirects';
-$_lang['stercseo.redirects.description'] = 'Here you can view and manage your 301 redirects. Redirects can also be added from the resource create and update pages.';
 $_lang['stercseo.uri_add'] = 'Add redirect url';
 $_lang['stercseo.uri_header'] = 'Below is a list of old URLs for this page';
 $_lang['stercseo.grid_noresults'] = '<h4>No redirects</h4><p>There are no redirects set for this page.</p>';
@@ -83,6 +82,7 @@ $_lang['setting_stercseo.hide_from_usergroups'] = 'Hide SEOTab from these usergr
 $_lang['setting_stercseo.hide_from_usergroups_desc'] = 'Comma separated list of usergroups who are not allowed to access SEOTab';
 
 // CMP
+$_lang['stercseo.redirects.description'] = 'Here you can view and manage your 301 redirects. Redirects can also be added from the resource create and update pages.';
 $_lang['stercseo.uri'] = 'Old url (url to redirect)';
 $_lang['stercseo.target'] = 'Target resource / url';
 $_lang['stercseo.uri_update'] = 'Update redirect';
